--- a/Recommendations_with_IBM-zh.ipynb
+++ b/Recommendations_with_IBM-zh.ipynb
@@ -1521,8 +1521,8 @@
     "\n",
     "        if len(recs) > m:\n",
     "            break\n",
-    "\n",
-    "    return recs  # return your recommendations for this user_id"
+    "    #Modified \n",
+    "    return recs[:m]  # return your recommendations for this user_id"
    ]
   },
   {
